--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1146,47 +1146,23 @@ h6 {
 	width: 100%;
 	display: flex;
 	justify-content: flex-end;
+	padding: 22px 16px 18px 0px;
 
 	.message__content {
-		display: flex;
-		flex-direction: column;
+		width: 223px;
 
 		.message__title {
 			text-align: center;
+			font-size: 10px;
+			letter-spacing: 0.4px;
 		}
 	}
 
-	&.message_mobile {
+	&.message_bg {
 		background-image: url('../img/message.jpg');
 		background-size: auto 100%;
 		background-position-x: 72%;
 		background-repeat: no-repeat;
-		padding: 22px 16px 18px 0px;
-
-		.message__content {
-			width: 75.33%;
-
-			.message__title {
-				font-size: 10px;
-				letter-spacing: 0.4px;
-			}
-		}
-	}
-
-	&.message_desktop {
-		display: none;
-		background-image: url('../img/message.jpg');
-		padding: 107px 90px 38px 0px;
-
-		.message__content {
-			width: 33.614%;
-
-			.message__title {
-				font-size: 16px;
-				letter-spacing: 0.64px;
-				padding: 0px 30px;
-			}
-		}
 	}
 }
 
@@ -1194,11 +1170,29 @@ h6 {
 	display: flex;
 	flex-direction: column;
 
+	.message-form__label {
+		font-size: 12px;
+		letter-spacing: 0.48px;
+		margin-bottom: 3px;
+		margin-top: 8px;
+
+		&.message-form__label_name {
+			margin-top: 0px;
+		}
+	}
+
 	.message-form__input {
 		border: 1px solid #8e9993;
 		background: #fff;
 		color: rgba(0, 0, 0, 0.51);
 		font-family: $prata;
+		font-size: 10px;
+		letter-spacing: 0.4px;
+		padding: 6px;
+
+		&.message-form__input_textarea {
+			height: 81px;
+		}
 
 		&:focus {
 			color: #000;
@@ -1225,6 +1219,11 @@ h6 {
 		border: none;
 		color: #fff;
 		font-family: $prata;
+		font-size: 14px;
+		letter-spacing: 0.56px;
+		margin-top: 25px;
+		padding: 6px;
+		line-height: 17px;
 
 		&:hover {
 			background-color: #48544f;
@@ -1240,66 +1239,6 @@ h6 {
 		&:disabled {
 			background-color: #8e999366;
 			color: #ffffff82;
-		}
-	}
-
-	&.message-form_mobile {
-		.message-form__label {
-			font-size: 12px;
-			letter-spacing: 0.48px;
-			margin-bottom: 3px;
-			margin-top: 8px;
-
-			&.message-form__label_name {
-				margin-top: 0px;
-			}
-		}
-
-		.message-form__input {
-			font-size: 10px;
-			letter-spacing: 0.4px;
-			padding: 6px;
-
-			&.message-form__input_textarea {
-				height: 81px;
-			}
-		}
-
-		.message-form__submit {
-			font-size: 14px;
-			letter-spacing: 0.56px;
-			margin-top: 25px;
-			padding: 6px;
-			line-height: 17px;
-		}
-	}
-
-	&.message-form_desktop {
-		.message-form__label {
-			font-size: 16px;
-			letter-spacing: 0.64px;
-			margin-bottom: 7px;
-			margin-top: 21px;
-		}
-
-		.message-form__input {
-			font-size: 14px;
-			letter-spacing: 0.56px;
-			padding: 10px;
-			height: 41px;
-
-			&.message-form__input_textarea {
-				height: 152px;
-			}
-		}
-
-		.message-form__submit {
-			width: 50%;
-			align-self: flex-end;
-			font-size: 16px;
-			letter-spacing: 0.64px;
-			height: 56px;
-			margin-top: 38px;
 		}
 	}
 }
@@ -1363,6 +1302,53 @@ h6 {
 /// resolution styles ///
 
 @media (min-width: 1280px) {
+	.message {
+		padding: 107px 90px 38px 0px;
+
+		.message__content {
+			width: 33.614%;
+
+			.message__title {
+				font-size: 16px;
+				letter-spacing: 0.64px;
+				padding: 0px 30px 20px;
+			}
+		}
+
+		&.message_bg {
+			background-position-x: 0%;
+		}
+	}
+
+	.message-form {
+		.message-form__label {
+			font-size: 16px;
+			letter-spacing: 0.64px;
+			margin-bottom: 7px;
+			margin-top: 21px;
+		}
+
+		.message-form__input {
+			font-size: 14px;
+			letter-spacing: 0.56px;
+			padding: 10px;
+			height: 41px;
+
+			&.message-form__input_textarea {
+				height: 152px;
+			}
+		}
+
+		.message-form__submit {
+			width: 50%;
+			align-self: flex-end;
+			font-size: 16px;
+			letter-spacing: 0.64px;
+			height: 56px;
+			margin-top: 38px;
+		}
+	}
+
 	.footer {
 		display: flex;
 		flex-direction: row-reverse;
@@ -1459,14 +1445,6 @@ h6 {
 		}
 
 		.info_desktop {
-			display: flex;
-		}
-
-		.message_mobile {
-			display: none;
-		}
-
-		.message_desktop {
 			display: flex;
 		}
 	}
