--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1067,24 +1067,8 @@ h6 {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-	}
-
-	&.info_mobile {
-		.info__card-wrapper {
-			flex-direction: column;
-			padding: 27px 0px;
-		}
-	}
-
-	&.info_desktop {
-		display: none;
-
-		.info__card-wrapper {
-			width: 992px;
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-		}
+		flex-direction: column;
+		padding: 27px 0px;
 	}
 }
 
@@ -1095,49 +1079,28 @@ h6 {
 
 	.info-card__pic {
 		display: flex;
+		margin-bottom: 7px;
 	}
 
 	.info-card__title {
 		font-family: $open-sans;
 		font-weight: 700;
 		text-align: center;
+		font-size: 12px;
+		letter-spacing: 1.2px;
 	}
 
 	.info-card__details {
 		font-family: $open-sans;
 		text-align: center;
-	}
+		font-size: 12px;
+		letter-spacing: 1.2px;
+		display: flex;
 
-	&.info-card_mobile {
-		.info-card__pic {
-			margin-bottom: 7px;
-		}
-
-		.info-card__title {
-			font-size: 12px;
-			letter-spacing: 1.2px;
-		}
-
-		.info-card__details {
-			font-size: 12px;
-			letter-spacing: 1.2px;
-		}
-	}
-
-	&.info-card_desktop {
-		.info-card__pic {
-			margin-bottom: 23px;
-		}
-
-		.info-card__title {
-			font-size: 22px;
-			letter-spacing: 2.2px;
-			margin-bottom: 30px;
-		}
-
-		.info-card__details {
-			font-size: 22px;
-			letter-spacing: 2.2px;
+		.info-card__text-separator {
+			font-family: inherit;
+			font-size: inherit;
+			letter-spacing: inherit;
 		}
 	}
 }
@@ -1302,6 +1265,32 @@ h6 {
 /// resolution styles ///
 
 @media (min-width: 1280px) {
+	.info {
+		.info__card-wrapper {
+			width: 992px;
+			flex-direction: row;
+		}
+	}
+
+	.info-card {
+		.info-card__pic {
+			margin-bottom: 23px;
+		}
+
+		.info-card__title {
+			font-size: 22px;
+			letter-spacing: 2.2px;
+			margin-bottom: 30px;
+		}
+
+		.info-card__details {
+			font-size: 22px;
+			letter-spacing: 2.2px;
+			flex-direction: column;
+			align-items: center;
+		}
+	}
+
 	.message {
 		padding: 107px 90px 38px 0px;
 
@@ -1437,14 +1426,6 @@ h6 {
 		}
 
 		.products_desktop {
-			display: flex;
-		}
-
-		.info_mobile {
-			display: none;
-		}
-
-		.info_desktop {
 			display: flex;
 		}
 	}
