products cards remake

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,11 +109,11 @@
   display: none;
 }
 
-#products-carousel .amp-carousel-button {
+#products-slider__slider .amp-carousel-button {
   top: 71%;
 }
 
-#products-carousel .amp-carousel-button-next {
+#products-slider__slider .amp-carousel-button-next {
   right: 30px;
   display: block;
   width: 22px;
@@ -125,17 +125,17 @@
   mask: url("../img/arrow-right.svg");
   -webkit-mask: url("../img/arrow-right.svg");
 }
-#products-carousel .amp-carousel-button-next:hover {
+#products-slider__slider .amp-carousel-button-next:hover {
   background-color: rgba(88, 98, 93, 0.8);
 }
-#products-carousel .amp-carousel-button-next:active {
+#products-slider__slider .amp-carousel-button-next:active {
   background-color: #48544f;
 }
-#products-carousel .amp-carousel-button-next:focus {
+#products-slider__slider .amp-carousel-button-next:focus {
   background-color: #48544f;
 }
 
-#products-carousel .amp-carousel-button-prev {
+#products-slider__slider .amp-carousel-button-prev {
   left: 30px;
   display: block;
   width: 22px;
@@ -147,13 +147,13 @@
   mask: url("../img/arrow-left.svg");
   -webkit-mask: url("../img/arrow-left.svg");
 }
-#products-carousel .amp-carousel-button-prev:hover {
+#products-slider__slider .amp-carousel-button-prev:hover {
   background-color: rgba(88, 98, 93, 0.8);
 }
-#products-carousel .amp-carousel-button-prev:active {
+#products-slider__slider .amp-carousel-button-prev:active {
   background-color: #48544f;
 }
-#products-carousel .amp-carousel-button-prev:focus {
+#products-slider__slider .amp-carousel-button-prev:focus {
   background-color: #48544f;
 }
 
@@ -811,99 +811,53 @@ h6 {
   letter-spacing: 2.2px;
 }
 
-.products {
+.products-slider {
   width: 100%;
-}
-.products.products_mobile {
   display: flex;
   justify-content: center;
   overflow: hidden;
 }
-.products.products_desktop {
+
+.products-cards-row {
   display: none;
+  width: 100%;
   padding: 45px 45px 130px;
   justify-content: space-between;
   position: relative;
   background-color: #fdfdfd;
 }
 
-.product-card .product-card__content {
+.product-card {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.product-card .product-card__title {
-  text-align: center;
-}
-.product-card .product-card__decoration-pic {
-  display: flex;
-  padding: 5px 0px;
-}
-.product-card .product-card__description {
-  text-align: center;
-}
-.product-card.product-card_mobile {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.product-card.product-card_mobile .product-card__pic {
+.product-card .product-card__pic {
   height: 294px;
   width: 385px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.product-card.product-card_mobile .product-card__content {
+.product-card .product-card__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 12px;
 }
-.product-card.product-card_mobile .product-card__content .product-card__title {
+.product-card .product-card__content .product-card__title {
+  text-align: center;
   font-size: 16px;
   letter-spacing: 1.04px;
 }
-.product-card.product-card_mobile .product-card__content .product-card__description {
+.product-card .product-card__content .product-card__decoration-pic {
+  display: flex;
+  padding: 5px 0px;
+}
+.product-card .product-card__content .product-card__description {
+  text-align: center;
   font-size: 14px;
   letter-spacing: 1.4px;
-}
-.product-card.product-card_desktop .product-card__pic {
-  width: 385px;
-  height: 294px;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.product-card.product-card_desktop .product-card__pic.product-card__pic_1 {
-  background-image: url("../img/product_1.jpg");
-}
-.product-card.product-card_desktop .product-card__pic.product-card__pic_2 {
-  background-image: url("../img/product_2.jpg");
-}
-.product-card.product-card_desktop .product-card__pic.product-card__pic_3 {
-  background-image: url("../img/product_3.jpg");
-}
-.product-card.product-card_desktop .product-card__content {
-  margin-top: 55px;
-}
-.product-card.product-card_desktop .product-card__content .product-card__title {
-  font-size: 23px;
-  letter-spacing: 1.495px;
-}
-.product-card.product-card_desktop .product-card__content .product-card__description {
-  max-width: 292px;
-  font-size: 15px;
-  letter-spacing: 1.5px;
-}
-.product-card.product-card_desktop:not(:last-child) {
-  position: relative;
-}
-.product-card.product-card_desktop:not(:last-child)::after {
-  content: "";
-  color: black;
-  background: black;
-  height: 100%;
-  width: 1px;
-  position: absolute;
-  top: 60px;
-  right: -7.5px;
 }
 
 .info {
@@ -1078,6 +1032,37 @@ h6 {
 }
 
 @media (min-width: 1280px) {
+  .products-slider {
+    display: none;
+  }
+  .products-cards-row {
+    display: flex;
+  }
+  .product-card .product-card__content {
+    margin-top: 55px;
+  }
+  .product-card .product-card__content .product-card__title {
+    font-size: 23px;
+    letter-spacing: 1.495px;
+  }
+  .product-card .product-card__content .product-card__description {
+    max-width: 292px;
+    font-size: 15px;
+    letter-spacing: 1.5px;
+  }
+  .product-card:not(:last-child) {
+    position: relative;
+  }
+  .product-card:not(:last-child)::after {
+    content: "";
+    color: black;
+    background: black;
+    height: 100%;
+    width: 1px;
+    position: absolute;
+    top: 60px;
+    right: -7.5px;
+  }
   .info .info__card-wrapper {
     width: 992px;
     flex-direction: row;
