reviews block remake

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,58 +57,58 @@
   display: none;
 }
 
-#reviews-carousel_desktop .amp-carousel-button {
-  top: 247px;
-}
-
-#reviews-carousel_desktop .amp-carousel-button-next {
-  right: 398px;
-  display: block;
-  height: 14px;
-  width: 28px;
-  border: none;
-  background-image: none;
-  background-color: #000000;
-  transition: background-color 0.2s;
-  mask: url("../img/arrow-right-sm.svg");
-  -webkit-mask: url("../img/arrow-right-sm.svg");
-}
-#reviews-carousel_desktop .amp-carousel-button-next:hover {
-  background-color: #6a7571;
-}
-#reviews-carousel_desktop .amp-carousel-button-next:active {
-  background-color: #55605c;
-}
-#reviews-carousel_desktop .amp-carousel-button-next:focus {
-  background-color: #55605c;
-}
-
-#reviews-carousel_desktop .amp-carousel-button-prev {
-  left: 398px;
-  display: block;
-  height: 14px;
-  width: 28px;
-  border: none;
-  background-image: none;
-  background-color: #000000;
-  transition: background-color 0.2s;
-  mask: url("../img/arrow-left-sm.svg");
-  -webkit-mask: url("../img/arrow-left-sm.svg");
-}
-#reviews-carousel_desktop .amp-carousel-button-prev:hover {
-  background-color: #6a7571;
-}
-#reviews-carousel_desktop .amp-carousel-button-prev:active {
-  background-color: #55605c;
-}
-#reviews-carousel_desktop .amp-carousel-button-prev:focus {
-  background-color: #55605c;
-}
-
-#reviews-carousel_mobile .amp-carousel-button {
+#reviews-slider__slider .amp-carousel-button {
   display: none;
 }
 
+@media (min-width: 1280px) {
+  #reviews-slider__slider .amp-carousel-button {
+    display: flex;
+    top: 247px;
+  }
+  #reviews-slider__slider .amp-carousel-button-next {
+    right: calc(50% - 42px);
+    display: block;
+    height: 14px;
+    width: 28px;
+    border: none;
+    background-image: none;
+    background-color: #000000;
+    transition: background-color 0.2s;
+    mask: url("../img/arrow-right-sm.svg");
+    -webkit-mask: url("../img/arrow-right-sm.svg");
+  }
+  #reviews-slider__slider .amp-carousel-button-next:hover {
+    background-color: #6a7571;
+  }
+  #reviews-slider__slider .amp-carousel-button-next:active {
+    background-color: #55605c;
+  }
+  #reviews-slider__slider .amp-carousel-button-next:focus {
+    background-color: #55605c;
+  }
+  #reviews-slider__slider .amp-carousel-button-prev {
+    left: calc(50% - 42px);
+    display: block;
+    height: 14px;
+    width: 28px;
+    border: none;
+    background-image: none;
+    background-color: #000000;
+    transition: background-color 0.2s;
+    mask: url("../img/arrow-left-sm.svg");
+    -webkit-mask: url("../img/arrow-left-sm.svg");
+  }
+  #reviews-slider__slider .amp-carousel-button-prev:hover {
+    background-color: #6a7571;
+  }
+  #reviews-slider__slider .amp-carousel-button-prev:active {
+    background-color: #55605c;
+  }
+  #reviews-slider__slider .amp-carousel-button-prev:focus {
+    background-color: #55605c;
+  }
+}
 #products-slider__slider .amp-carousel-button {
   top: 71%;
 }
@@ -747,68 +747,46 @@ h6 {
   background-color: #6a7571;
 }
 
-.reviews {
+.reviews-slider {
   width: 100%;
   background-color: rgba(142, 153, 147, 0.62);
-}
-.reviews .reviews__title {
-  text-align: center;
-  min-width: 290px;
-}
-.reviews.reviews_mobile {
   padding: 18px 15px 0px 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
 }
-.reviews.reviews_mobile .reviews__title {
+.reviews-slider .reviews__title {
+  text-align: center;
   font-size: 12px;
   margin-bottom: 14px;
   letter-spacing: 0.78px;
 }
-.reviews.reviews_mobile .reviews__selector {
+.reviews-slider .reviews__slider-wrapper {
+  width: 98.621%;
+  height: 93px;
+}
+.reviews-slider .reviews__slider-wrapper .reviews-slider__slider {
+  height: 64px;
+}
+.reviews-slider .reviews-slider__dots-selector {
   position: absolute;
   bottom: 12px;
   display: flex;
   left: calc(50% - 12.5px);
 }
-.reviews.reviews_desktop {
-  display: none;
-  padding: 50px 200px 0px 200px;
-}
-.reviews.reviews_desktop .reviews__title {
-  font-size: 23px;
-  letter-spacing: 1.495px;
-  margin-bottom: 60px;
-}
 
 .review-card .review-card__text {
   text-align: center;
-}
-.review-card .review-card__author {
-  text-align: center;
-}
-.review-card.review-card_mobile .review-card__text {
   font-size: 10px;
   letter-spacing: 1px;
   margin-bottom: 8px;
 }
-.review-card.review-card_mobile .review-card__author {
+.review-card .review-card__author {
+  text-align: center;
   font-family: "Open Sans", sans-serif;
   font-size: 11px;
   letter-spacing: 1.1px;
-}
-.review-card.review-card_desktop .review-card__text {
-  font-size: 30px;
-  letter-spacing: 3px;
-  margin-bottom: 36px;
-  max-height: 122.4px;
-}
-.review-card.review-card_desktop .review-card__author {
-  font-family: "Open Sans", sans-serif;
-  font-size: 22px;
-  letter-spacing: 2.2px;
 }
 
 .products-slider {
@@ -1032,6 +1010,34 @@ h6 {
 }
 
 @media (min-width: 1280px) {
+  .reviews-slider {
+    padding: 50px 200px 0px 200px;
+  }
+  .reviews-slider .reviews__title {
+    font-size: 23px;
+    letter-spacing: 1.495px;
+    margin-bottom: 60px;
+  }
+  .reviews-slider .reviews__slider-wrapper {
+    width: 100%;
+    height: 338px;
+  }
+  .reviews-slider .reviews__slider-wrapper .reviews-slider__slider {
+    height: 338px;
+  }
+  .reviews-slider .reviews-slider__dots-selector {
+    display: none;
+  }
+  .review-card .review-card__text {
+    font-size: 30px;
+    letter-spacing: 3px;
+    margin-bottom: 36px;
+    max-height: 122.4px;
+  }
+  .review-card .review-card__author {
+    font-size: 22px;
+    letter-spacing: 2.2px;
+  }
   .products-slider {
     display: none;
   }
@@ -1175,18 +1181,6 @@ h6 {
     display: none;
   }
   .wrapper .menu_desktop {
-    display: flex;
-  }
-  .wrapper .products_mobile {
-    display: none;
-  }
-  .wrapper .reviews_mobile {
-    display: none;
-  }
-  .wrapper .reviews_desktop {
-    display: block;
-  }
-  .wrapper .products_desktop {
     display: flex;
   }
 }/*# sourceMappingURL=styles.css.map */
